@@ -37,7 +37,8 @@
 		android:layout_weight="1.0"
 		android:orientation="vertical"
 		android:layout_width="fill_parent"
-		android:layout_height="fill_parent">
+		android:layout_height="fill_parent"
+		android:background="@drawable/logo">
 	
 	<TextView android:id="@+id/info_name"
 		android:layout_width="fill_parent" 
