@@ -6,6 +6,7 @@ import android.preference.PreferenceManager;
 import android.view.KeyEvent;
 
 public class Settings extends android.preference.PreferenceActivity {
+	public static final String DEFAULT_MEDIA_PATH = "/sdcard/mod";
 	public static final String PREF_MEDIA_PATH = "media_path";
 	public static final String PREF_VOL_BOOST = "vol_boost";
 	public static final String PREF_CHANGELOG_VERSION = "changelog_version";
@@ -21,7 +22,7 @@ public class Settings extends android.preference.PreferenceActivity {
         super.onCreate(icicle);
         
         prefs = PreferenceManager.getDefaultSharedPreferences(this);
-        oldPath = prefs.getString(PREF_MEDIA_PATH, null);
+        oldPath = prefs.getString(PREF_MEDIA_PATH, DEFAULT_MEDIA_PATH);
         addPreferencesFromResource(R.xml.preferences);
     }
         
@@ -30,7 +31,7 @@ public class Settings extends android.preference.PreferenceActivity {
     	if(event.getAction() == KeyEvent.ACTION_DOWN) {
     		switch(keyCode) {
     		case KeyEvent.KEYCODE_BACK:
-    			String newPath = prefs.getString(PREF_MEDIA_PATH, null);
+    			String newPath = prefs.getString(PREF_MEDIA_PATH, DEFAULT_MEDIA_PATH);
     			setResult(newPath == oldPath ? RESULT_CANCELED : RESULT_OK);
     			finish();
     		}
