@@ -12,6 +12,7 @@ Stable versions
 	- add stereo and panning options to Android application preferences
 	- add list of supported formats to Android application menu
 	- add volume bars and list of instruments to Android application
+	- fix default mod directory setting in Android application
 	- code cleanup
 
 3.2.0 (20100530):
